--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,2 +1,17 @@
+
+$primary: #1f4d56;
+$alternate: #102d33;
+$secondary: #0b2427;
+$accent: #e68482;
+
+$white: #fff;
+
+// typography
+$default: #666;
+
+$darkgreen-background: hsl(186%, 100%, 12%);
+$sacramento-state-green-background: hsl(186%, 96%, 10%);
+$sacramento-state-green-background: rgb(1, 47, 52);
+
 $primaryColor: #9b87b8; // purple
 $secondaryColor: #23cfa7; // green
